# state-machine-agent

./: Cargo.toml  README.md
src/: lib.rs  main.rs  resize.rs  unit.rs
tests/: test_resize.rs
