[package]
name = "dimension_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
regex = "1.12.2"
yatima-rustyline = "0.2.0"

[features]
default = []

[lib]
name = "dimension_parser"
path = "src/lib.rs"

[[bin]]
name = "dimension_parser_cli"
path = "src/main.rs"

[dev-dependencies]
float_eq = "1.0.1"
